# glboptimizer

./: .env.example  .env.production.example  .replit  ANIMATION_STEP_RESULT_KEY_FIX.md  CELERY_WORKER_DEPLOYMENT_ISSUE_REPORT.md  CODE_QUALITY_IMPROVEMENTS_REPORT.md  CONFIGURATION_ROBUSTNESS_FIX.md  CONFIGURATION_SYSTEM_SUMMARY.md  CONTEXT_MANAGER_EXCEPTION_HANDLING_FIX.md  CRITICAL_BUG_FIX_REPORT.md  DRACO_CONFIGURATION_CONSOLIDATION_REPORT.md  DUPLICATE_FUNCTIONS_INVESTIGATION_REPORT.md  DYNAMIC_ENVIRONMENT_PATH_FIX.md  ENHANCED_TOCTOU_SECURITY_IMPLEMENTATION_REPORT.md  FINAL_CODE_QUALITY_VERIFICATION_REPORT.md  FINAL_PATHLIB_CONSISTENCY_ACHIEVEMENT_REPORT.md  FINAL_REDIS_IMPLEMENTATION_REPORT.md  FINAL_SYSTEM_STATUS_REPORT.md  FINAL_TOCTOU_SECURITY_IMPLEMENTATION_REPORT.md  GLTFPACK_FINAL_QUALITY_GATE_REMOVAL_FIX.md  KTX2_QUALITY_GUARD_REMOVAL_REPORT.md  KTX2_UNIVERSAL_ACCESS_VERIFICATION_REPORT.md  MAGIC_NUMBERS_EXTRACTION_REPORT.md  OPTIMIZATION_FIX_REPORT.md  PARALLEL_FUNCTION_ARCHITECTURE_FIX_REPORT.md  PATHLIB_CONSISTENCY_IMPLEMENTATION_REPORT.md  PRODUCTION_DEPLOYMENT.md  README.md  README_STARTUP.md  REDIS_CONNECTIVITY_ANALYSIS_REPORT.md  REDIS_RESOLUTION_FINAL_REPORT.md  SECURITY.md  SUBPROCESS_SECURITY_FIX_REPORT.md  TEST_RESULTS_SUMMARY.md  TEXTURE_COMPRESSION_CONSOLIDATION_REPORT.md  TOCTOU_PROTECTION_IMPLEMENTATION_REPORT.md  UNIT_TESTING_MILESTONE_REPORT.md  analytics.py  app.py  celery_app.py  (+71 more)
attached_assets/: Pasted--Let-s-fix-these-critical-issues-systematically-The-problems-you-ve-identified-are-interconnected-a-1751867291832_1751867291833.txt  Pasted--Log-DOM-loaded-initializing-GLB-Optimizer-script-js-line-897-Log-File-input-element--1751876792414_1751876792414.txt  (+33 more)
output/: .gitkeep  (+8 more)
(+42 files in other folders)
