[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "click>=8.2.1",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "amqp>=5.3.1",
    "billiard>=4.2.1",
    "blinker>=1.9.0",
    "kombu>=5.5.4",
    "vine>=5.1.0",
    "itsdangerous>=2.2.0",
    "typing-extensions>=4.14.1",
    "python-dateutil>=2.9.0",
    "dnspython>=2.7.0",
    "greenlet>=3.2.3",
    "packaging>=25.0",
    "certifi>=2025.6.15",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "urllib3>=2.5.0",
    "requests>=2.32.4",
    "six>=1.17.0",
    "prompt-toolkit>=3.0.51",
    "wcwidth>=0.2.13",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
]
